--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,11 +10,12 @@ android {
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.example.ctdemo"
-        minSdkVersion 17
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true // This line here
     }
     buildTypes {
         release {
@@ -44,6 +45,9 @@ dependencies {
     implementation "com.google.android.material:material:1.2.0-alpha03"
 
     implementation 'com.github.IslamKhSh:CardSlider:0.4'
+
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
+    implementation 'com.github.bolaware:momentz:v1.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
